# rs-cars-api

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml
src/: db.rs  main.rs  models.rs  schema.rs
src/data/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
