[package]
name = "rs-cars-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.8", features = [  "postgres"] }
env_logger = "0.9.0"
dotenvy = "0.15.1"